--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -78,14 +78,12 @@
 
               <!--mobileMenu toggle-->
 
-              <div class="mobileMenuToggle"><a href="/">Rails Bridge LA</a></div>
-
-              <div class="mobileMenuToggle"><a href="/">{{ site.name }}</a></div>
+              <div class="mobileMenuToggle"><a href="/"></a></div>
 
               <!--navigation-->
               <ul class="navigation">
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#homepage">Welcome</a></li>
-                <li><a class="navigateTo" href="{{ site.baseurl}}/#features-1">List of Meetups</a></li>
+                <li><a class="navigateTo" href="{{ site.baseurl}}/#features-1">Meetups</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#features-2">Mentors</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#signup">Sign Up</a></li>
               	{% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}
