--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,7 +65,7 @@
          % endif % 
                   
           
-        <!--  <ul>
+        <--  <ul>
             <li>
               <div class="avatar">
                 <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
@@ -86,7 +86,7 @@
                   facilisis. 
                 </p>
               </div>
-              level 1 response
+              <!--level 1 response-->
               <ul class="response level-1">
                 <li class="blog-post-response-last">
                   <div class="avatar">
@@ -107,7 +107,7 @@
                     </p>
                   </div>
                                     
-                  level 2 response
+                  <!--level 2 response-->
                   <ul class="response level-2">
                     <li class="blog-post-response-last">
                       <div class="avatar">
@@ -132,7 +132,7 @@
                     </li>
                   </ul>
                 </li>
-              </ul> 
+              </ul>
             </li>
             
             <li class="blog-post-comment-last">
@@ -156,9 +156,9 @@
               </div>
             </li>
           </ul>
-        </div>--> 
+        </div>
              
-        <!-- <h4><span>Post a Comment</span></h4>
+        <h4><span>Post a Comment</span></h4>
         <form action="" method="post" class="form comment-form" id="comment-form">
           <p>
             <input type="text" name="username" class="required" id="username" value="Your Name" />
@@ -175,7 +175,7 @@
           <p>
             <input type="submit" value="SEND" class="submit submitTheme" id="submitform" />
           </p>
-        </form>  -->   
+        </form>    
      
         <!--start pagination-->
         <div class="blog-post-navigation">	
