testing layout again

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,11 +42,8 @@
           </div><!-- end blog-post-content -->
         </div><!-- end blog-post -->
         
-        <h4>
-          <span>05 Comments</span>
-        </h4>
+        <h4><span>Post a Comment</span></h4>
         <div class="blog-post-comments">
-           <h4><span>Post a Comment</span></h4>
            {% if page.comments %}
            <div id="disqus_thread"></div>
           <script type="text/javascript">
@@ -65,97 +62,97 @@
          {% endif %} 
                   
           
-          <ul>
-            <li>
-              <div class="avatar">
-                <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
-              </div>
-              <div class="comment">
-                <div class="author">
-                  <span>Adman Fitzpatrick</span>
-                </div>
-                <div class="comment-meta">
-                  January 4, 2012 at 9:09 am - <a href="">Reply</a>
-                </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus 
-                  vitae ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. 
-                  Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam risus. 
-                  Donec laoreet ultricies rhoncus. Aliquam adipiscing. Lorem ipsum dolor sit amet, 
-                  consectetur adipiscing elit. Donec iaculis metus vitae ligula elementum ut luctus lorem 
-                  facilisis. 
-                </p>
-              </div>
+          <!-- <ul>
+                      <li>
+                        <div class="avatar">
+                          <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
+                        </div>
+                        <div class="comment">
+                          <div class="author">
+                            <span>Adman Fitzpatrick</span>
+                          </div>
+                          <div class="comment-meta">
+                            January 4, 2012 at 9:09 am - <a href="">Reply</a>
+                          </div>
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus 
+                            vitae ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. 
+                            Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam risus. 
+                            Donec laoreet ultricies rhoncus. Aliquam adipiscing. Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit. Donec iaculis metus vitae ligula elementum ut luctus lorem 
+                            facilisis. 
+                          </p>
+                        </div> -->
               <!--level 1 response-->
-              <ul class="response level-1">
-                <li class="blog-post-response-last">
-                  <div class="avatar">
-                    <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
-                  </div>
-                  <div class="comment">
-                    <div class="author">
-                      <span>George Adams</span>
-                    </div>
-                    <div class="comment-meta">
-                      January 4, 2012 at 9:09 am - <a href="">Reply</a>
-                    </div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus 
-                      vitae ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod 
-                      nisi. Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec 
-                      diam risus.
-                    </p>
-                  </div>
+              <!-- <ul class="response level-1">
+                              <li class="blog-post-response-last">
+                                <div class="avatar">
+                                  <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
+                                </div>
+                                <div class="comment">
+                                  <div class="author">
+                                    <span>George Adams</span>
+                                  </div>
+                                  <div class="comment-meta">
+                                    January 4, 2012 at 9:09 am - <a href="">Reply</a>
+                                  </div>
+                                  <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus 
+                                    vitae ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod 
+                                    nisi. Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec 
+                                    diam risus.
+                                  </p>
+                                </div> -->
                                     
                   <!--level 2 response-->
-                  <ul class="response level-2">
-                    <li class="blog-post-response-last">
-                      <div class="avatar">
-                        <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
-                      </div>
-                      <div class="comment">
-                        <div class="author">
-                          <span>Corey Andersson</span>
-                        </div>
-                        <div class="comment-meta">
-                          January 4, 2012 at 9:09 am - <a href="">Reply</a>
-                        </div>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus vitae 
-                          ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. 
-                          Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam 
-                          risus. Donec laoreet ultricies rhoncus. Aliquam adipiscing. Lorem ipsum dolor sit amet, 
-                          consectetur adipiscing elit. Donec iaculis metus vitae ligula elementum ut luctus lorem 
-                          facilisis.
-                        </p>
-                      </div>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            
-            <li class="blog-post-comment-last">
-              <div class="avatar">
-                <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
-              </div>
-              <div class="comment">
-                <div class="author"><span>
-                  Adman Fitzpatrick</span>
-                </div>
-                <div class="comment-meta">
-                  January 4, 2012 at 9:09 am - <a href="">Reply</a>
-                </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus vitae ligula 
-                  elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. Aenean augue dolor, 
-                  facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam risus. Donec laoreet ultricies 
-                  rhoncus. Aliquam adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
-                  iaculis metus vitae ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam risus. Donec laoreet ultricies rhoncus. Aliquam adipiscing
-                </p>
-              </div>
-            </li>
-          </ul>
+                  <!-- <ul class="response level-2">
+                                      <li class="blog-post-response-last">
+                                        <div class="avatar">
+                                          <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
+                                        </div>
+                                        <div class="comment">
+                                          <div class="author">
+                                            <span>Corey Andersson</span>
+                                          </div>
+                                          <div class="comment-meta">
+                                            January 4, 2012 at 9:09 am - <a href="">Reply</a>
+                                          </div>
+                                          <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus vitae 
+                                            ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. 
+                                            Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam 
+                                            risus. Donec laoreet ultricies rhoncus. Aliquam adipiscing. Lorem ipsum dolor sit amet, 
+                                            consectetur adipiscing elit. Donec iaculis metus vitae ligula elementum ut luctus lorem 
+                                            facilisis.
+                                          </p>
+                                        </div>
+                                      </li>
+                                    </ul>
+                                  </li>
+                                </ul> -->
+            <!-- </li>
+                       
+                       <li class="blog-post-comment-last">
+                         <div class="avatar">
+                           <img src="images/gallery/avatar.jpg" width="60" height="60" alt=""/>
+                         </div>
+                         <div class="comment">
+                           <div class="author"><span>
+                             Adman Fitzpatrick</span>
+                           </div>
+                           <div class="comment-meta">
+                             January 4, 2012 at 9:09 am - <a href="">Reply</a>
+                           </div>
+                           <p>
+                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis metus vitae ligula 
+                             elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. Aenean augue dolor, 
+                             facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam risus. Donec laoreet ultricies 
+                             rhoncus. Aliquam adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
+                             iaculis metus vitae ligula elementum ut luctus lorem facilisis. Sed non leo nisl, ac euismod nisi. Aenean augue dolor, facilisis id fringilla ut, tempus vitae nibh. Nullam nec diam risus. Donec laoreet ultricies rhoncus. Aliquam adipiscing
+                           </p>
+                         </div>
+                       </li>
+                     </ul> -->
         </div>
              
         
