updated post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -156,7 +156,7 @@
         </div>
              
         
-        <form action="" method="post" class="form comment-form" id="comment-form">
+        <!-- <form action="" method="post" class="form comment-form" id="comment-form"> -->
           <!-- <p>
             <input type="text" name="username" class="required" id="username" value="Your Name" />
           </p>
@@ -172,7 +172,7 @@
           <p>
             <input type="submit" value="SEND" class="submit submitTheme" id="submitform" />
           </p>   -->
-        </form>    
+        <!-- </form> -->    
      
         <!--start pagination-->
         <div class="blog-post-navigation">	
