--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
                   <li>Comments: <span>35</span></li>
                   <li class="separator">|</li>
                   {% for member in site.data.members %}
-                    <li>Posted by: <a href="#">{{ member.name }}</a></li>
+                    <li>Postedd by: <a href="#">{{ member.name }}</a></li>
                   {% endfor %}
                   <li class="separator">|</li>
                   {% for post in site.categories[page.category] %}
