--- a/css/udt_shortcodes.css
+++ b/css/udt_shortcodes.css
@@ -1,8 +1,7 @@
 /*------------------------------------------------------
 
 	Type: FSA shortcode css
-	Author: UDTHEMES
-	Author URI: http://themeforest.net/user/udfrance
+	Author: CURVE DESIGN
 
 /*------------------------------------------------------
 
@@ -919,7 +918,7 @@ text-decoration:none;text-transform:uppercase;padding:0 24px;border:0;cursor:poi
 
 		/* colors
 		-----------------------------*/
-		.submitTheme{color:#fff !important;background:#fc7022 !important;}
+		.submitTheme{color:#fff !important;background:#E56869 !important;}
 		.submitYellow{color:#fff !important;background:#fcdc01 !important;}
 		.submitOrange{color:#fff !important;background:#fc7022 !important;}
 		.submitRed{color:#fff !important;background:#ed0e1e !important;}
