added all the jotform js files and created and thanks html file for redirects after the email submission. Also integrated the Mailchimp form and created a contact_form_2.html to play around and make the styles work.

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -10,30 +10,31 @@
       <form class="jotform-form" action="http://submit.jotform.us/submit.php" method="post" name="form_40871082820148" id="40871082820148" accept-charset="utf-8">
         <input type="hidden" name="formID" value="40871082820148" />
         
-        <label class="pd-20-l" id="label_1" for="input_1">Name:</label>
+        <!-- <label class="pd-20-l" id="label_1" for="input_1">Name:</label -->
         <p class="pd-20-l">
           <input type="text" class=" form-textbox validate[required] required" data-type="input-textbox" id="input_1" name="q1_name1 name" size="20" value="" />
         </p>
         
-        <label class="pd-20-l" id="label_2" for="input_2">Email:</label>
+        <!-- <label class="pd-20-l" id="label_2" for="input_2">Email:</label> -->
         <p class="pd-20-l">
-          <input type="text" class=" form-textbox validate[required] required" data-type="input-textbox" id="input_2 email" name="q2_email contact email" size="20" value="" />
+          <input type="text" class=" form-textbox validate[required] required" data-type="input-textbox" id="input_2" name="q2_email contact email" size="20" value="" />
         </p>
             
         <p id="id_3" class="pd-20-l">
           <label class="form-label-left" id="label_3" for="input_3"> I'd like to talk to you about: </label>
           <select class="form-dropdown" style="width:220px" id="input_3" name="q3_subject">
+            <option value="Mentoring"> Choose a Topic </option>
             <option value="Mentoring"> Mentoring </option>
-            <option value="Providing an Demo"> Providing an Demo </option>
+            <option value="Providing an Demo"> Providing a Demo </option>
             <option value="Helping Out"> Helping Out </option>
             <option value="Sponsorship"> Sponsorship </option>
             <option value="See my Message"> See my Message </option>
           </select>
         </p>
             
-        <label class="pd-20-l" id="label_4" for="input_4">Leave a Message:</label>
+        <!-- <label class="pd-20-l" id="label_4" for="input_4">Leave a Message:</label> -->
         <p id="cid_4" class="form-input pd-20-l">
-          <textarea id="input_4" class="form-textarea validate[required] required" name="q4_message message" cols="30" rows="6"></textarea>
+          <textarea id="input_4" class="form-textarea validate[required] required" name="q4_message" cols="30" rows="6"></textarea>
         </p>
         
         <p class="pd-20-l">Cheers!</p> 
@@ -65,33 +66,7 @@
       </form>
       <img src="//tracking.jotform.com/form/40871082820148" style="display:none" />
       <!-- END -->
-      
-      <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <!-- THIS IS THAT DAMN FORM FROM SIMPLEFORM.... -->
-      <div class="clearfix"></div>
-      <form action="http://getsimpleform.com/messages?form_api_token=[ef37f66b359f020339d7570de35c01e2]" method="post" class="contactForm form" id="contact-form">
-        <!-- all your input fields here.... -->
-        <p><input type='text' name='name' class="required" id="name" value="Your Name" /></p>
-        <p><input type="text" name=" contact email" class="required" id="email" value="E-mail" /></p>
-        <p class="pd-20-l">I'd like to talk to you about:                                                               
-          <select name="subject">
-            <option>Mentoring</option>
-            <option>Providing an Demo</option>
-            <option>Helping Out</option>
-            <option>Sponsorship</option>
-            <option>See my Message</option>
-          </select>
-        </p>
-        <!-- <p><textarea class="required" name="details" style="width: 100%;" rows="" cols="">Message...</textarea></p> -->
-        <textarea name="details" class="required" name="message" id="message" rows="" cols="">Message</textarea>
-        <p class="pd-10">Cheers!</p>
-        <input type="submit" value="SEND" class="submit submitTheme"/>
-        <span id="msg">* = required field</span>
-      </form>
-      <!-- END OF THAT DAMN FORM FROM SIMPLEFORM.... -->
-      <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     </div>
-    
     <!--start sidebar-->
     <div id="sidebar" class="left">
       <ul>
@@ -109,7 +84,3 @@
     </div>
   </div>
 </div>
-
-
-
- 
