--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -25,9 +25,13 @@
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.lazyload.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/contact.js"></script> 
         <script type="text/javascript" src="{{ site.baseurl}}/js/udt_shortcodes.js"></script>
         
+        <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script>
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
@@ -54,13 +58,23 @@
         				count: 3,
         				fetch: 20,
         				filter: function(t){ return ! /^@\w+/.test(t["tweet_raw_text"]); },
-        				username: "udfrance"
+        				username: "rbla"
         			  });
         			});
 
 
         			//tweet buttons
         			 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+               
+               
+               //jotform functionality
+               JotForm.init(function(){
+                  $('input_1').hint('Your Name');
+                  $('input_2').hint('Your Email');
+                  $('input_4').hint('Your Message');
+               });
+
+
 
         </script>
     
