updated the style sheet and make final tweaks to contact page, plus testing has been done. Check on Mailchimp

--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -12,18 +12,18 @@
         <div class="form-all">
           <ul class="form-section">
             <li class="form-line" id="id_1"> 
-              <p id="cid_1" class="form-input">
-                <input type="text" class=" form-textbox validate[required] required" data-type="input-textbox" id="input_1" name="q1_name" size="20" value="" maxlength="20" />
-              </p>
+              <div id="cid_1" class="form-input">
+                <input type="text" class="form-textbox validate[required] required" data-type="input-textbox" id="input_1" name="q1_name" size="20" value="" maxlength="20" />
+              </div>
             </li>
             <li class="form-line" id="id_2">
-              <p id="cid_2" class="form-input">
-                <input type="text" class=" form-textbox validate[required]required" data-type="input-textbox" id="input_2" name="q2_email2" size="20" value="" />
-              </p>
+              <div id="cid_2" class="form-input">
+                <input type="text" class="form-textbox validate[required] required" data-type="input-textbox" id="input_2" name="q2_email2" size="20" value="" />
+              </div>
             </li>
-            <li class="form-line pd-20-l" id="id_3">
+            <li class="form-line" id="id_3">
               <label class="form-label-left" id="label_3" for="input_3"> I'd like to talk to you about: </label>
-              <p id="cid_3" class="form-input">
+              <div id="cid_3" class="form-input">
                 <select class="form-dropdown" style="width:220px" id="input_3" name="q3_subject">
                   <option value="Choose a Topic">Choose a Topic</option>
                   <option value="Mentoring"> Mentoring </option>
@@ -32,17 +32,17 @@
                   <option value="Sponsorship"> Sponsorship </option>
                   <option value="See my Message"> See my Message </option>
                 </select>
-              </p>
+              </div>
             </li>
             <li class="form-line" id="id_4">
-              <p id="cid_4" class="form-input pd-20-l">
+              <div id="cid_4" class="form-input">
                 <textarea id="input_4" class="form-textarea validate[required] required" name="q4_message" cols="30" rows="6" value=""></textarea>
-              </p>
+              </div>
             </li>
             <p class="pd-20-l">Cheers!</p> 
         
             <li class="form-line" id="id_5">
-              <p id="cid_5" class="form-input-wide pd-20-l">
+              <div id="cid_5" class="form-input-wide">
                 <div style="text-align:left" class="form-buttons-wrapper">
                   <button id="input_5" type="submit" class="form-submit-button submit submitTheme" style="margin-right: 20px;">    <!-- updated class with: submit submitTheme -->
                     SEND
@@ -52,7 +52,7 @@
                     Clear Form
                   </button>
                 </div>
-              </p>
+              </div>
             </li>
         
             <li style="display:none">
@@ -69,7 +69,7 @@
       <img src="//tracking.jotform.com/form/40871082820148" style="display:none" />
     </div>  
     <!-- END -->
-
+    
     
     <!--start sidebar-->
     <div id="sidebar" class="left">
