--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -12,6 +12,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.baseurl}}/css/flexslider.css"/>
         <link rel="stylesheet" href="{{ site.baseurl}}/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/form.css" />
         <link rel="stylesheet" href="{{ site.baseurl}}/css/style.css" /> 
         <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_shortcodes.css" />
         <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_media_queries.css" />
