updated the forms, validated the email and state management

--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -18,7 +18,7 @@
             </li>
             <li class="form-line" id="id_2">
               <div id="cid_2" class="form-input">
-                <input type="text" class="form-textbox validate[required] required" data-type="input-textbox" id="input_2" name="q2_email2" size="20" value="" />
+                <input type="text" class="form-textbox validate[required, Email] required" data-type="input-textbox" id="input_2" name="q2_email2" size="20" value="" />
               </div>
             </li>
             <li class="form-line" id="id_3">
@@ -39,7 +39,7 @@
                 <textarea id="input_4" class="form-textarea validate[required] required" name="q4_message" cols="30" rows="6" value=""></textarea>
               </div>
             </li>
-            <p class="pd-20-l">Cheers!</p> 
+            <p class="pd-20-l">*= Required!</p> 
         
             <li class="form-line" id="id_5">
               <div id="cid_5" class="form-input-wide">
