--- a/css/form.css
+++ b/css/form.css
@@ -603,11 +603,18 @@
     color:#333;
 }
 
-.form-line-error input:not(#coupon-input), .form-line-error textarea, .form-validation-error {
-    border:1px solid red;
-	-moz-box-shadow:0 0 2px red;
-	-webkit-box-shadow:0 0 2px red;
-	box-shadow:0 0 2px red;
+/*.form-line-error input:not(#coupon-input), .form-line-error textarea, .form-validation-error {
+    border:0px solid red;
+  -moz-box-shadow:0 0 2px red;
+  -webkit-box-shadow:0 0 2px red;
+  box-shadow:0 0 2px red;
+}*/ 
+
+/*.form-line-error input:not(#coupon-input), .form-line-error textarea, .form-validation-error {
+ border: 0px solid #ccc; */ 
+ -webkit-box-shadow:inset 0 0 2px #ccc;
+  -moz-box-shadow:inset 0 0px 2px #ccc;
+  box-shadow:inset 0 0px 3px #ccc; 
 }
 .form-validation-error.form-input{
     border:none;
@@ -657,7 +664,7 @@
     height:0px;
     width:0px;
     border:10px solid transparent;
-    border-bottom-color:#FFCCCC;
+    border-bottom-color:#E56869;
     border-bottom-width:11px;
     left:-10px;
     top:-10px;
@@ -670,7 +677,7 @@
     z-index:900;
     right:auto;
     top:auto;
-    color:#333;
+    color:#fff;
     padding:3px;
     max-width:100%;
     padding-bottom:3px;
@@ -680,9 +687,9 @@
     -webkit-box-shadow:0px 2px 4px rgba(102, 102, 102, 0.5);
     -moz-border-radius:6px 6px;
     -webkit-border-radius:6px 6px;
-	box-shadow:0px 2px 4px rgba(102, 102, 102, 0.5);
-	border-radius:6px 6px;
-    background:#FFCCCC;
+	  box-shadow:0px 2px 4px rgba(102, 102, 102, 0.5);
+	  border-radius:6px 6px;
+    background:#E56869;
 }
 /*
 .form-input .form-error-message:before,
