--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,7 @@
 	  border: 1px solid rgba(82,168,236,.8);
 	  -webkit-box-shadow:inset 0 0 2px rgba(82,168,236,.8);
 	  -moz-box-shadow:inset 0 0px 2px rgba(82,168,236,.8);
-	  box-shadow:inset 0 0px 3px rgba(82,168,236,.8); 
+	  box-shadow:inset 0 0px 3px #ccc; 
 	  outline:none;
 	}
 	
